@@ -1,5 +1,6 @@
 package com.githubx.githubrepositoryms.service;
 
+import com.githubx.githubrepositoryms.client.OrganizationsApiClient;
 import com.githubx.githubrepositoryms.dao.CollaboratorDao;
 import com.githubx.githubrepositoryms.dao.RepositoryDao;
 import com.githubx.githubrepositoryms.mapper.CollaboratorMapper;
@@ -7,15 +8,16 @@ import com.githubx.githubrepositoryms.model.CollaboratorDocument;
 import com.githubx.githubrepositoryms.model.RepositoryDocument;
 import com.smithy.g.repo.server.collaborator.model.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class CollaboratorServiceImpl implements CollaboratorService {
@@ -23,6 +25,7 @@ public class CollaboratorServiceImpl implements CollaboratorService {
     private final CollaboratorDao collaboratorDao;
     private final RepositoryDao repositoryDao;
     private final CollaboratorMapper collaboratorMapper;
+    private final OrganizationsApiClient organizationsApiClient;
 
     @Override
     public ResponseEntity<Void> addCollaboratorByUsername(String owner, String repo,
@@ -89,11 +92,61 @@ public class CollaboratorServiceImpl implements CollaboratorService {
         if (repoOpt.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
-        List<CollaboratorDTO> collaborators = collaboratorDao.findByRepositoryId(repoOpt.get().getId())
+
+        // Get direct collaborators from database
+        List<CollaboratorDTO> directCollaborators = collaboratorDao.findByRepositoryId(repoOpt.get().getId())
                 .stream()
                 .map(collaboratorMapper::toDto)
-                .toList();
-        return ResponseEntity.ok(new ListCollaboratorsBody(collaborators));
+                .collect(Collectors.toList());
+
+        // Track usernames to avoid duplicates
+        Set<String> existingUsernames = directCollaborators.stream()
+                .map(CollaboratorDTO::getUsername)
+                .collect(Collectors.toSet());
+
+        // Get team members from organizations-ms
+        try {
+            OrganizationsApiClient.RepoAccessResponse repoAccess = organizationsApiClient.getRepoAccess(owner, repo);
+
+            if (repoAccess != null && repoAccess.getTeams() != null) {
+                for (OrganizationsApiClient.TeamAccessDTO team : repoAccess.getTeams()) {
+                    if (team.getMembers() != null) {
+                        for (OrganizationsApiClient.TeamMemberDTO member : team.getMembers()) {
+                            // Skip if already a direct collaborator
+                            if (existingUsernames.contains(member.getUsername())) {
+                                continue;
+                            }
+                            existingUsernames.add(member.getUsername());
+
+                            // Map team permission to collaborator role
+                            String role = mapTeamPermissionToRole(team.getPermission());
+
+                            CollaboratorDTO teamMemberCollaborator = new CollaboratorDTO()
+                                    .userId(member.getUserId())
+                                    .username(member.getUsername())
+                                    .avatarUrl(member.getAvatarUrl())
+                                    .role(CollaboratorRole.fromValue(role))
+                                    .addedAt(null); // Team members don't have addedAt
+
+                            directCollaborators.add(teamMemberCollaborator);
+                        }
+                    }
+                }
+            }
+        } catch (Exception e) {
+            log.warn("Could not fetch team members from organizations-ms for {}/{}: {}", owner, repo, e.getMessage());
+        }
+
+        return ResponseEntity.ok(new ListCollaboratorsBody(directCollaborators));
+    }
+
+    private String mapTeamPermissionToRole(String permission) {
+        if (permission == null) return "read";
+        return switch (permission.toUpperCase()) {
+            case "ADMIN" -> "admin";
+            case "WRITE" -> "write";
+            default -> "read";
+        };
     }
 
     @Override
